--- a/table.html
+++ b/table.html
@@ -45,15 +45,15 @@
             <h4>Main Menu</h4>
             <li>
                 <span class="material-symbols-outlined">dashboard</span>
-                <a href="index.html">Dashboard</a>
+                <a href="https://adityasuhendar.github.io/UTS-Pemweb-2024/index.html">Dashboard</a>
             </li>
             <li>
                 <span class="material-symbols-outlined">mail</span>
-                <a href="/form.html">Message</a>
+                <a href="https://adityasuhendar.github.io/UTS-Pemweb-2024/form.html">Message</a>
             </li>
             <li>
                 <span class="material-symbols-outlined">bar_chart</span>
-                <a href="/table.html">Review</a>
+                <a href="https://adityasuhendar.github.io/UTS-Pemweb-2024/table.html">Review</a>
             </li>
         </ul>
     </aside>
