--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@
           <p class="text-sm">Copyright © 2024. Aditya Wahyu Suhendar (122140235)</p>
           <ul class="flex justify-center gap-6 mt-4">
               <li>
-                  <a href="/index.html" class="flex items-center gap-1 hover:text-gray-400">
+                  <a href="https://adityasuhendar.github.io/UTS-Pemweb-2024/index.html" class="flex items-center gap-1 hover:text-gray-400">
                       <span class="material-symbols-outlined">home</span> Home
                   </a>
               </li>
               <li>
-                  <a href="/form.html" class="flex items-center gap-1 hover:text-gray-400">
+                  <a href="https://adityasuhendar.github.io/UTS-Pemweb-2024/form.html" class="flex items-center gap-1 hover:text-gray-400">
                       <span class="material-symbols-outlined">mail</span> Message
                   </a>
               </li>
               <li>
-                  <a href="/table.html" class="flex items-center gap-1 hover:text-gray-400">
+                  <a href="https://adityasuhendar.github.io/UTS-Pemweb-2024/table.html" class="flex items-center gap-1 hover:text-gray-400">
                       <span class="material-symbols-outlined">info</span> Tentang
                   </a>
               </li>
