--- a/form.html
+++ b/form.html
@@ -99,28 +99,28 @@
     </main>
 
     <footer class="bg-gray-800 text-white py-6 mt-10">
-        <div class="container mx-auto text-center">
-            <h2 class="text-xl font-bold mb-2">Terima Kasih Telah Membaca</h2>
-            <p class="text-sm">Copyright © 2024. Aditya Wahyu Suhendar (122140235)</p>
-            <ul class="flex justify-center gap-6 mt-4">
-                <li>
-                    <a href="/index.html" class="flex items-center gap-1 hover:text-gray-400">
-                        <span class="material-symbols-outlined">home</span> Home
-                    </a>
-                </li>
-                <li>
-                    <a href="/form.html" class="flex items-center gap-1 hover:text-gray-400">
-                        <span class="material-symbols-outlined">mail</span> Message
-                    </a>
-                </li>
-                <li>
-                    <a href="/table.html" class="flex items-center gap-1 hover:text-gray-400">
-                        <span class="material-symbols-outlined">info</span> Tentang
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </footer>
+      <div class="container mx-auto text-center">
+          <h2 class="text-xl font-bold mb-2">Terima Kasih Telah Membaca</h2>
+          <p class="text-sm">Copyright © 2024. Aditya Wahyu Suhendar (122140235)</p>
+          <ul class="flex justify-center gap-6 mt-4">
+              <li>
+                  <a href="https://adityasuhendar.github.io/UTS-Pemweb-2024/index.html" class="flex items-center gap-1 hover:text-gray-400">
+                      <span class="material-symbols-outlined">home</span> Home
+                  </a>
+              </li>
+              <li>
+                  <a href="https://adityasuhendar.github.io/UTS-Pemweb-2024/form.html" class="flex items-center gap-1 hover:text-gray-400">
+                      <span class="material-symbols-outlined">mail</span> Message
+                  </a>
+              </li>
+              <li>
+                  <a href="https://adityasuhendar.github.io/UTS-Pemweb-2024/table.html" class="flex items-center gap-1 hover:text-gray-400">
+                      <span class="material-symbols-outlined">info</span> Tentang
+                  </a>
+              </li>
+          </ul>
+      </div>
+  </footer>
 </body>
     <script>
         function toggleSidebar() {
